# redistricting-gerrymandering

./: .gitignore  Districting Algorithm.ipynb  LICENSE  README.md  pyproject.toml
src/electoralSimulation/: Agent.py  CalculationMethod.py  CalculationMethod_Ind.py  District.py  Map.py  Precinct.py
src/redistricting_simulation/: Agent.py  CalculationMethod.py  District.py  Map.py  Precinct.py
tests/: test.py  test_agent.py  test_calculationMethod.py  test_map.py  test_precinct.py
