[build-system]
requires = ["hatchling", "matplotlib>=3.5.2", "matplotlib-inline>=0.1.3", "numpy>=1.23.1"]
build-backend = "hatchling.build"

[project]
name = "redistricting_simulation_soroswen"
version = "0.0.1"
authors = [
  { name="Soros Wen", email="wenmingjun0725@gmail.com" },
]
description = "A Redistricting Simulation"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"