[build-system]
requires = ["hatchling", "matplotlib>=3.5.2", "matplotlib-inline>=0.1.3", "numpy>=1.23.1"]
build-backend = "hatchling.build"

[project]
name = "electoralSimulation"
version = "1.0.0"
authors = [
  { name="Soros Wen", email="wenmingjun0725@gmail.com" },
]
description = "A package allows you to simulate redistricting process. "
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/SorosWen/redistricting-gerrymandering"
"Bug Tracker" = "https://github.com/SorosWen/redistricting-gerrymandering/issues"